--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -5,73 +5,77 @@ title: Subfield
 
 # 🌿 Subfield 🌿
 
-**Subfield is a protocol for decentralized applications.**
+**Subfield is a protocol for decentralized knowledge.**
 
+*Subfield is an ephemeral RDF graph made up of [Semantic Triples](https://en.wikipedia.org/wiki/Semantic_triple).*
 
-#### 🌾 [Why](#-why-) 🌾
-#### ☘️ [Schema](#️-schema-) ☘️
-#### 🌹 [Entries](#-entries-) 🌹
-#### 🍀 [Routing](#-routing-) 🍀
-#### 🪴 [Examples](#-examples-) 🪴
-#### 🌻 [Future](#-future-) 🌻
+#### 🌾 [Why](#why) 🌾
+#### ☘️ [Schema](#️schema) ☘️
+#### 🌹 [Entries](#entries) 🌹
+#### 🍀 [Routing](#routing) 🍀
+#### 🪴 [Examples](#examples) 🪴
+#### 🌻 [Future](#future) 🌻
 
-
+<a name="why"></a>
 ## 🌾 Why 🌾
 
 **Compromise is the little-death that brings total obliteration.**
 
 - Federation is an unsustainable middle-ground between centralization and decentralization. Exchanging a king for a less powerful feudal lord is not a long-term solution, as people in charge of others will always have pressures and incentives that are not necessarily aligned with their dependents' best interests.
 
+<a name="schema"></a>
 ## ☘️ Schema ☘️
 
 - Servers have two endpoints:
-  - `/:signer/:cosigner/:tangent`
-    - This REST endpoint can be used to `POST/GET/DELETE` entries without requiring a websocket connection.
-      - `POST` requires all 3 parameters and signature from the signer.
-      - `GET` requires any combination of 1-3 of the parameters, with non-provided parameters being a wildcard (underscore) and returning paginated results.
-      - `DELETE` requires all 3 parameters and a signature from either the signer or cosigner. 
-    - Path Parameters: _(Encoded as 52-character base32 strings)_
-      - `signer`
-        - the write key (ed25519 public key of the publisher)
-      - `cosigner`
-        - the read key (ed25519 public key of the recipient)
-      - `tangent`
-        - this is completely arbitrary and could be:
-        - \- a topic (the blake3 hash of the topic's name)
-        - \- a nonce (a random 32-byte string, equivalent to an obfuscated topic)
-        - \- another key (this is currently meaningless in the spec, but could have an emergent use case)
-    - Query: (All query parameters are optional and used for pagination)
-      - `limit` (number, default 1)
-        - return up to *n* entries
-      - `after` (hash, default null)
-        - return entries created after this hash
-      - `before` (hash, default null)
-        - return entries created before this hash
-      - `ascending` (boolean, default false)
-        - return entries in ascending order
-             
-  - `/ws`
-    - The websocket endpoint is required for pubsub actions, and behaves similarly to the REST endpoint. Messages are objects with the following properties:
-      - `id` - A random id used to track responses to requests
-      - `action` - `POST|GET|DELETE|RESPONSE` or `SUBSCRIBE|UNSUBSCRIBE|MESSAGE`
-      - `path` - `/:signer/:cosigner/:tangent`
-      - `data` - (for `POST`, `RESPONSE`, and `MESSAGE`)
 
+- `/:signer/:cosigner/:tangent`
+  - This REST endpoint can be used to `POST/GET/DELETE` entries without requiring a websocket connection.
+    - `POST` requires all 3 parameters and signature from the signer.
+    - `GET` requires any combination of 1-3 of the parameters, with non-provided parameters being a wildcard (underscore) and returning paginated results.
+    - `DELETE` requires all 3 parameters and a signature from either the signer or cosigner. 
+  - Path Parameters: *(Encoded as base32 strings)*
+    - `signer`
+      - the write key *(ed25519 public key of the publisher)*
+    - `cosigner`
+      - the read key *(ed25519 public key of the recipient)*
+    - `tangent`
+      - this is completely arbitrary and could be:
+      - \- a topic *(the blake3 hash of the topic's name)*
+      - \- a nonce *(a random 32-byte string, equivalent to an obfuscated topic)*
+      - \- another ed25519 key *(this is currently meaningless in the spec, but could have an emergent use case)*
+  - Query Parameters: (All query parameters are optional and used for pagination)
+    - `limit` (number, default 1)
+      - return up to *n* entries
+    - `after` (hash, default null)
+      - return entries created after this hash
+    - `before` (hash, default null)
+      - return entries created before this hash
+    - `ascending` (boolean, default false)
+      - return entries in ascending order
+            
+- `/ws`
+  - The websocket endpoint is required for pubsub actions, and behaves similarly to the REST endpoint. Messages are objects with the following properties:
+    - `id` - Used to track responses to requests
+    - `action` - `POST|GET|DELETE|RESPONSE` or `SUBSCRIBE|UNSUBSCRIBE|MESSAGE`
+    - `path` - `/:signer/:cosigner/:tangent`
+    - `data` - (for `POST`, `RESPONSE`, and `MESSAGE`)
+
+<a name="entries"></a>
 ## 🌹 Entries 🌹
 
-Entries are rows in the nodes' local Sqlite databases, and have the following properties:
+- Entries are rows in the nodes' local databases, and have the following properties:
 
-- public metadata:
-  - the signature of the signer
-  - the signature of the cosigner (optional, sometimes provided after instantiation)
-  - whether it is public or private (boolean)
-  - the created and updated timestamp (unix time)
-  - the nonce used to encrypt the rest of the entry (optional)
-- optionally encrypted data (depending on the public/private boolean):
-  - the plaintext of the topic name (since the tangent could be totally random or salted to obfuscate the topic, max 1kb)
-  - the datatype (u32 - values under 1000 are reserved for the protocol, such as pointers, and anything else is user-defined, such as user profiles, posts, comments, etc.)
-  - the data (max 1mb)
+- **Public metadata:**
+  - \- signature of the signer 
+  - \- signature of the cosigner *(optional, sometimes provided after instantiation)*
+  - \- whether it is public or private *(boolean)*
+  - \- created and updated timestamps *(unix time)*
+- **Private metadata:** *(optionally encrypted, depending on the public/private boolean)*
+  - \- plaintext of the tangent hash's seed *(since the seed could be totally random or salted to obfuscate the topic, max 1kb)*
+  - \- datatype *(u32 - values under 1000 are reserved for the protocol, such as pointers, and anything else is user-defined, such as user profiles, posts, comments, etc.)*
+  - \- data *(max 1mb)* - data can optionally be edited with an offset. For example, an implementer could treat the 1mb array as 256 4kB chunks, and edit them individually.
 
+<a name="routing"></a>
 ## 🍀 Routing 🍀
 
 - Data is replicated 3 times in the network, and each replica is stored on the node closest to each of the three parameters. 
@@ -87,9 +91,10 @@ Entries are rows in the nodes' local Sqlite databases, and have the following pr
 
 - This spec does not currently provide anonymity, as there are no "hops" between nodes. It may be implemented as an option in the future, depending on the needs of the applications that use it.
 
+<a name="examples"></a>
 ## 🪴 Examples 🪴
 
-- The following are examples of how the protocol could be used to implement features of a social network. These mechanisms are not strictly defined, and implementers are encouraged to experiment with different ways of building their applications:
+- The following are examples of how the protocol could be used to implement features of a social network. These mechanisms are not strictly defined, and implementers are encouraged to experiment with different ways of building their applications.
 - *For readability, keys are prefixed with a colon (`:alice`) and hashes are prefixed with a hashtag (`#profile`).* 
 
 - Profile:
@@ -108,7 +113,9 @@ Entries are rows in the nodes' local Sqlite databases, and have the following pr
   - First, Alice would create two ephemeral keypairs for the post (one each for reading and writing). 
     - *If the post is public, she would only need one keypair, since the read key would not be shared with anyone.*
   - `:post/:post/#cats` : Then, she would publish the post, maybe to the topic `#cats`. If the post is private, she will need to distribute the read key to the intended audience.
-  - `:alice/:post/#post` : If Alice wants the post to be tied to her identity, she can signify ownership by publishing and cosigning an entry with both her key and the post's key, to prove that she holds both keys.
+  - `:alice/:post/#post` : If Alice wants the post to be tied to her identity, she can signify ownership by publishing and cosigning an entry with both her key and the post's write key, to prove that she holds both keys.
+  - `:post/:platform/#post`: If she wants to publish the post to a platform, the address might look like this, as this would give the platform the ability to moderate posts. This would most likely redirect to the original `:post/:post/#cats` address.
+  
 - Commenting on a post:
   - First Bob would create an ephemeral keypair for the comment.
   - `:comment/:post/#comment` : Then, he would add the comment to the post. 
@@ -126,10 +133,15 @@ Entries are rows in the nodes' local Sqlite databases, and have the following pr
   - `_/:group/#message` : Get the latest messages in the group, as users would create a new keypair for each message this would be a way to get the latest messages from all users in the group. This is similar to how posts and comments work, but would likely not be published to their account like a post would.
   - _Many problems for platforms, such as private profiles require groups, so a more efficient tree-based (non O(n)) group key-management system like [OpenMLS](https://openmls.tech) may be implemented in the future. Currently, OpenMLS requires storing a history of join messages, which does not fit well with the Subfield model of a semi-ephemeral cache._
 
+<a name="future"></a>
 ## 🌻 Future 🌻 
 
-- Due to the lack of identity-based authentication, it is expected that spam would be a problem, an unfortunate side-effect of decentralization. Applications will have to implement their own spam filters, which will most likely look like web-of-trust setups, but nodes may have heuristics and rate limits to help with this.
+- Due to the lack of identity-based authentication, it is expected that spam would be a problem, which is an unfortunate side-effect of decentralization. Applications will have to implement their own spam filters, which will most likely look like web-of-trust setups, but nodes may have heuristics and rate limits to help with this.
 
-- Nodes will also be able to subscribe to 'nukelists' which are lists of public keys that can request nodes to delete entries. While this is technically a form of censorship, it is a necessary evil due to the fact that entries are not necessarily encrypted. This is not unprecedented, as decentralized systems like Storj have similar mechanisms.
+- There will need to be a way to handle nodes that are misbehaving, most likely looking like a reputation system involving uptime and responsiveness. This will be implemented in the future, but is not a part of the initial spec.
+
+- Nodes will need to be able to subscribe to "nukelists", which are lists of trusted public keys that can request nodes to delete entries. While this is technically a form of censorship, it is a necessary evil due to the fact that entries are not always encrypted. This is not unprecedented, as decentralized systems like [Storj](https://storj.io) have similar mechanisms.
+
+- Eventually, it is a goal to implement higher-level features, such as a way to cache static content, upload logic as wasm binaries, or have more detailed search indexes, depending on the needs of the applications that use it.
 
 # 🌿 Subfield 🌿
