--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -3,11 +3,10 @@ layout: ../layouts/Layout.astro
 title: Subfield
 ---
 
+<a name="subfield"></a>
 # 🌿 Subfield 🌿
 
-**Subfield is a protocol for decentralized knowledge.**
-
-*Subfield is an ephemeral RDF graph made up of [Semantic Triples](https://en.wikipedia.org/wiki/Semantic_triple).*
+**Subfield is a protocol for decentralized applications.**
 
 #### 🌾 [Why](#why) 🌾
 #### ☘️ [Schema](#️schema) ☘️
@@ -17,20 +16,20 @@ title: Subfield
 #### 🌻 [Future](#future) 🌻
 
 <a name="why"></a>
-## 🌾 Why 🌾
+## 🌾 [Why](#subfield) 🌾
 
 **Compromise is the little-death that brings total obliteration.**
 
-- Federation is an unsustainable middle-ground between centralization and decentralization. Exchanging a king for a less powerful feudal lord is not a long-term solution, as people in charge of others will always have pressures and incentives that are not necessarily aligned with their dependents' best interests.
+- Federation is an unsustainable middle-ground between centralization and decentralization. Exchanging a king for a less powerful feudal lord is not a long-term solution. People in charge of your data will always have pressures and incentives that are not necessarily aligned with your best interests.
 
 <a name="schema"></a>
-## ☘️ Schema ☘️
+## ☘️ [Schema](#subfield) ☘️
 
 - Servers have two endpoints:
 
 - `/:signer/:cosigner/:tangent`
   - This REST endpoint can be used to `POST/GET/DELETE` entries without requiring a websocket connection.
-    - `POST` requires all 3 parameters and signature from the signer.
+    - `POST` requires all 3 parameters and a signature from the signer.
     - `GET` requires any combination of 1-3 of the parameters, with non-provided parameters being a wildcard (underscore) and returning paginated results.
     - `DELETE` requires all 3 parameters and a signature from either the signer or cosigner. 
   - Path Parameters: *(Encoded as base32 strings)*
@@ -61,7 +60,7 @@ title: Subfield
     - `data` - (for `POST`, `RESPONSE`, and `MESSAGE`)
 
 <a name="entries"></a>
-## 🌹 Entries 🌹
+## 🌹 [Entries](#subfield) 🌹
 
 - Entries are rows in the nodes' local databases, and have the following properties:
 
@@ -76,7 +75,7 @@ title: Subfield
   - \- data *(max 1mb)* - data can optionally be edited with an offset. For example, an implementer could treat the 1mb array as 256 4kB chunks, and edit them individually.
 
 <a name="routing"></a>
-## 🍀 Routing 🍀
+## 🍀 [Routing](#subfield) 🍀
 
 - Data is replicated 3 times in the network, and each replica is stored on the node closest to each of the three parameters. 
   - Queries with wildcards return the latest created entries, and use keyset pagination. 
@@ -92,7 +91,7 @@ title: Subfield
 - This spec does not currently provide anonymity, as there are no "hops" between nodes. It may be implemented as an option in the future, depending on the needs of the applications that use it.
 
 <a name="examples"></a>
-## 🪴 Examples 🪴
+## 🪴 [Examples](#subfield) 🪴
 
 - The following are examples of how the protocol could be used to implement features of a social network. These mechanisms are not strictly defined, and implementers are encouraged to experiment with different ways of building their applications.
 - *For readability, keys are prefixed with a colon (`:alice`) and hashes are prefixed with a hashtag (`#profile`).* 
@@ -134,7 +133,7 @@ title: Subfield
   - _Many problems for platforms, such as private profiles require groups, so a more efficient tree-based (non O(n)) group key-management system like [OpenMLS](https://openmls.tech) may be implemented in the future. Currently, OpenMLS requires storing a history of join messages, which does not fit well with the Subfield model of a semi-ephemeral cache._
 
 <a name="future"></a>
-## 🌻 Future 🌻 
+## 🌻 [Future](#subfield) 🌻 
 
 - Due to the lack of identity-based authentication, it is expected that spam would be a problem, which is an unfortunate side-effect of decentralization. Applications will have to implement their own spam filters, which will most likely look like web-of-trust setups, but nodes may have heuristics and rate limits to help with this.
 
@@ -144,4 +143,4 @@ title: Subfield
 
 - Eventually, it is a goal to implement higher-level features, such as a way to cache static content, upload logic as wasm binaries, or have more detailed search indexes, depending on the needs of the applications that use it.
 
-# 🌿 Subfield 🌿
+# 🌿 [Subfield](#subfield) 🌿
