--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -6,7 +6,7 @@ title: Subfield
 <a name="subfield"></a>
 # 🌿 [Subfield](https://github.com/heapswap/subfield) 🌿
 
-*The grassroots-level protocol.*
+*A grassroots-level protocol.*
 
 #### 🌾 [Why](#why) 🌾
 #### ☘️ [Schema](#️schema) ☘️
